--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ wasm-bindgen = "0.2.92"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 anyhow = "1"
+itertools = "0.13.0"
 
 [dependencies.web-sys]
 version = "0.3"
