--- a/examples/leptos-animate-test/Cargo.toml
+++ b/examples/leptos-animate-test/Cargo.toml
@@ -11,17 +11,17 @@ actix-files = { version = "0.6", optional = true }
 actix-web = { version = "4", optional = true, features = ["macros"] }
 console_error_panic_hook = "0.1"
 http = { version = "1.0.0", optional = true }
-leptos = { version = "0.6", features = ["nightly"] }
-leptos_meta = { version = "0.6", features = ["nightly"] }
-leptos_actix = { version = "0.6", optional = true }
-leptos_router = { version = "0.6", features = ["nightly"] }
-wasm-bindgen = "=0.2.93"
+leptos = { version = "0.7.3", features = ["nightly"] }
+leptos_meta = { version = "0.7.3" }
+leptos_actix = { version = "0.7.3", optional = true }
+leptos_router = { version = "0.7.3", features = ["nightly"] }
+wasm-bindgen = "=0.2.99"
 leptos-animate = { path = "../.." }
-leptos-chartistry = { version = "0.1.6" }
+leptos-chartistry = { version = "0.2.0" }
 
 [features]
-csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+csr = ["leptos/csr"]
+hydrate = ["leptos/hydrate"]
 ssr = [
     "dep:actix-files",
     "dep:actix-web",
