--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,19 @@
 [workspace]
 members = ["examples/leptos-animate-test"]
 
+[workspace.dependencies]
+leptos = { version = "0.7.3", features = ["nightly"] }
+leptos_meta = { version = "0.7.3" }
+leptos_router = { version = "0.7.3", features = ["nightly"] }
+leptos_actix = { version = "0.7.3" }
+
+[patch.crates-io]
+leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "any-view-any-attr" }
+leptos_meta = { git = "https://github.com/leptos-rs/leptos.git", branch = "any-view-any-attr" }
+leptos_router = { git = "https://github.com/leptos-rs/leptos.git", branch = "any-view-any-attr" }
+leptos_actix = { git = "https://github.com/leptos-rs/leptos.git", branch = "any-view-any-attr" }
+reactive_graph = { git = "https://github.com/leptos-rs/leptos.git", branch = "any-view-any-attr" }
+
 [package]
 name = "leptos-animate"
 version = "0.1.0"
@@ -12,14 +25,13 @@ description = "Animation components and utilities for Leptos"
 keywords = ["leptos", "animations", "dom", "web", "wasm"]
 
 [dependencies]
-leptos = { version = "0.7.3", features = ["nightly"] }
+leptos = { workspace = true }
 indexmap = "2"
 leptos-use = "0.15.2"
 wasm-bindgen = "0.2.93"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
-anyhow = "1"
-itertools = "0.13.0"
+itertools = "0.14.0"
 
 [dependencies.web-sys]
 version = "0.3"
