--- a/examples/leptos-animate-test/Cargo.toml
+++ b/examples/leptos-animate-test/Cargo.toml
@@ -11,10 +11,10 @@ actix-files = { version = "0.6", optional = true }
 actix-web = { version = "4", optional = true, features = ["macros"] }
 console_error_panic_hook = "0.1"
 http = { version = "1.0.0", optional = true }
-leptos = { version = "0.7.3", features = ["nightly"] }
-leptos_meta = { version = "0.7.3" }
-leptos_actix = { version = "0.7.3", optional = true }
-leptos_router = { version = "0.7.3", features = ["nightly"] }
+leptos = { workspace = true }
+leptos_meta = { workspace = true }
+leptos_actix = { workspace = true, optional = true }
+leptos_router = { workspace = true }
 wasm-bindgen = "=0.2.99"
 leptos-animate = { path = "../.." }
 leptos-chartistry = { version = "0.2.0" }
