--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 members = ["examples/leptos-animate-test"]
 
 [workspace.dependencies]
-leptos = { version = "0.7.8", features = ["nightly"] }
-leptos_meta = { version = "0.7.8" }
-leptos_router = { version = "0.7.8", features = ["nightly"] }
-leptos_actix = { version = "0.7.8" }
+leptos = { version = "0.8.0", features = ["nightly"] }
+leptos_meta = { version = "0.8.0" }
+leptos_router = { version = "0.8.0", features = ["nightly"] }
+leptos_actix = { version = "0.8.0" }
 
 #[patch.crates-io]
 #leptos = { git = "https://github.com/leptos-rs/leptos.git" }
@@ -16,7 +16,7 @@ leptos_actix = { version = "0.7.8" }
 
 [package]
 name = "leptos-animate"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Luxalpa"]
 repository = "https://github.com/luxalpa/leptos-animate"
@@ -27,7 +27,7 @@ keywords = ["leptos", "animations", "dom", "web", "wasm"]
 [dependencies]
 leptos = { workspace = true }
 indexmap = "2"
-leptos-use = "0.15.2"
+leptos-use = "0.16.0-beta"
 wasm-bindgen = "0.2.93"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
