--- a/examples/leptos-animate-test/Cargo.toml
+++ b/examples/leptos-animate-test/Cargo.toml
@@ -16,7 +16,7 @@ leptos_actix = { workspace = true, optional = true }
 leptos_router = { workspace = true }
 wasm-bindgen = "=0.2.100"
 leptos-animate = { path = "../.." }
-leptos-chartistry = { version = "0.2.1" }
+leptos-chartistry = { version = "0.2.1", git = "https://github.com/youngday/leptos-chartistry.git" }
 
 [features]
 csr = ["leptos/csr"]
